# ruuvitag_fw_zephyr

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Kconfig  Kconfig.board  Kconfig.defconfig  LICENSE  LICENSE.md  Makefile  README.md  SECURITY.md  board.h  debugging.conf  mcuboot.conf  mcuboot_debugging.conf  nrf52_ruuvi.dts  nrf52_ruuvi.yaml  nrf52_ruuvi_defconfig  package-lock.json  package.json  prj.conf  pull_request_template.md  sample.yaml  west.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-and-release.yaml  get-next-version.js
boards/: CMakeLists.txt
boards/arm/nrf52833dk_nrf52833/: nrf52833dk_nrf52833.dts
boards/arm/nrf52_ruuvi/: Kconfig  Kconfig.defconfig  nrf52_pca10040.yaml  nrf52_pca10040_defconfig  nrf52_ruuvi.dts  nrf52_ruuvi.yaml  nrf52_ruuvi_defconfig
build_mcuboot/: CMakeCache.txt  zephyr_modules.txt  zephyr_settings.txt
build_mcuboot/Kconfig/: Kconfig.modules  Kconfig.shield  Kconfig.shield.defconfig
build_mcuboot/zephyr/: dts.cmake  edt.pickle  ruuvi_ruuvitag.dts.pre.d  ruuvi_ruuvitag.dts.pre.tmp  zephyr.dts
src/: main.c  ruuvi.h
src/battery_handler/: CMakeLists.txt  battery_handler.c  battery_handler.h
src/bme280_handler/: CMakeLists.txt  bme280_handler.c  bme280_handler.h
src/board_info/: CMakeLists.txt  board_info.c  board_info.h
src/bt_handler/: CMakeLists.txt  bt_handler.c  bt_handler.h
src/button_handler/: CMakeLists.txt  button_handler.c  button_handler.h
src/dfu_handler/: CMakeLists.txt  dfu_bluetooth.c  dfu_common.h  dfu_handler.c
src/dps310_handler/: CMakeLists.txt  dps310_handler.c  dps310_handler.h
src/led_controller/: CMakeLists.txt  led_controller.c  led_controller.h
src/led_handler/: CMakeLists.txt  led_handler.c  led_handler.h
src/lis2dh12_handler/: CMakeLists.txt  lis2dh12_handler.c  lis2dh12_handler.h
src/nfc_handler/: CMakeLists.txt  nfc_handler.c  nfc_handler.h
src/ruuvi_endpoint/: CMakeLists.txt  ruuvi_endpoint.c  ruuvi_endpoint.h
src/sensor_handler/: CMakeLists.txt  sensor_handler.c  sensor_handler.h
src/shtcx_handler/: CMakeLists.txt  shtcx_handler.c  shtcx_handler.h
src/tmp117_handler/: CMakeLists.txt  tmp117_handler.c  tmp117_handler.h
(+16 files in other folders)
